ported to 1.21.11